--- a/desafio-a-copa-server/Copa/Copa.Domain.Test/Copa.Domain.Test.csproj
+++ b/desafio-a-copa-server/Copa/Copa.Domain.Test/Copa.Domain.Test.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Copa.Application\Copa.Application.csproj" />
     <ProjectReference Include="..\Copa.Domain\Copa.Domain.csproj" />
   </ItemGroup>
 
