--- a/desafio-a-copa-server/Copa/Copa.Web.API/Copa.Web.API.csproj
+++ b/desafio-a-copa-server/Copa/Copa.Web.API/Copa.Web.API.csproj
@@ -9,6 +9,8 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
     <PackageReference Include="RestSharp" Version="106.11.4" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1" />
+    <PackageReference Include="Swashbuckle.Core" Version="5.6.0" />
   </ItemGroup>
 
   <ItemGroup>
